--- a/language/localization.csv
+++ b/language/localization.csv
@@ -1,7 +1,10 @@
 ﻿,en,zh
-Start,Start,开始
+Start Adventure,Start Adventure,开始冒险
 Options,Options,选项
 Quit,Quit,退出
 Volume,Volume,音量
 Back,Back,返回
 Home,Home,主页
+You Died,You Died,阵亡
+Play Again,Play Again,再次游玩
+Return Home,Return Home,返回主页
