Add more translation language can change now
:(

--- a/language/localization.csv
+++ b/language/localization.csv
@@ -8,3 +8,12 @@ Home,Home,主页
 You Died,You Died,阵亡
 Play Again,Play Again,再次游玩
 Return Home,Return Home,返回主页
+Graphics: ,Graphics: ,图像
+Volume:,Volume:,音量
+Language:,Language:,语言
+Settings,Settings,设置
+Deep Dive Descent,Deep Dive Descent,深浅迷航
+Language,Language,语言
+Return,Return,返回
+English,English,English
+Chinese,Chinese,中文
